# gooddata-fs

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.Alpine  Makefile  README.md  TODO.md
doc/: Filesystem.md
scripts/: build-debug.sh  build-release.sh
scripts/docker/: build-local.sh  clean-all.sh  docker-build.txt  docker.txt  run-local.sh
src/: fs.rs  gd.rs  helpers.rs  lib.rs  main.rs
src/fs/: constants.rs  filesystem.rs  flags.rs  helpers.rs  inode.rs  mod.rs
src/fs/items/: item.rs  mod.rs  project.rs  projects.rs  root.rs
src/fs/items/project/: mod.rs
src/fs/ops/: README.md  getattr.rs  lookup.rs  mod.rs  read.rs  readdir.rs  shared.rs
src/gd/: client.rs  connector.rs  mod.rs
src/helpers/: mod.rs
src/object/: account_setting.rs  associated_permissions.rs  associated_roles.rs  feature_flags.rs  mod.rs  permissions.rs  post_user.rs  post_user_login.rs  project.rs  projects.rs  report_req.rs  uri.rs  user_login.rs
src/object/account/: mod.rs  post_user_login.rs  projects.rs  user_login.rs
src/object/metadata/: fact.rs  metric.rs  mod.rs  report.rs
src/object/project/: associated_permissions.rs  associated_roles.rs  create.rs  feature_flags.rs  mod.rs  permissions.rs  project_content.rs  project_meta.rs
src/rest/: mod.rs  url.rs
tests/: gd.rs
tests/gd/: client.rs
