[package]
name = "gooddata-fuse"
version = "0.0.2"
authors = [
  "Tomas Korcak <korczis@gmail.com>"
]

[dependencies]
chomp = "0.2.5"
chrono = "0.2"
cookie = "0.2.4"
env_logger = "0.3"
fuse = "0.2"
hyper = "0.9"
libc = "0.2.11"
log = "0.3"
rand = "0.3.0"
regex = "0.1"
rustc-serialize = "0.3"
time = "0.1.35"
