[package]
name = "gooddata-fs"
version = "0.0.5"
authors = [
  "Tomas Korcak <korczis@gmail.com>"
]

[dependencies]
chomp = "0.2.5"
chrono = "0.2"
cookie = "0.2.4"
env_logger = "0.3"
fuse = "0.2"
hyper = "0.9"
libc = "0.2.11"
log = "0.3"
lru-cache = "0.0.7"
rand = "0.3.0"
regex = "0.1"
rustc-serialize = "0.3"
time = "0.1.35"
users = "0.5.0"

[lib]
name = "gooddata_fs"
path = "src/lib.rs"

[[bin]]
name = "gooddata-fs"
path = "src/main.rs"
doc = false

[profile.release]
lto = true
panic = "abort"
